public/index.css
html, body{
    height: 100%;
    margin: 0;
	overflow: hidden;
	font-family: Roboto, sans-serif;
}

#map {
    min-height: 100%;
}

#add_location_div:hover{
	background-color: #26327c;
}

.nav_divider_div{
	width: 300px;
    height: 1px;
    background-color: white;
	margin-left: 16px;
	margin-top: 8px;
	margin-bottom: 8px;
}

#add_location_div{
	position: fixed; 
    width: 55px; 
    height: 55px; 
    right: 0;
    bottom: 0;
	margin-right: 65px;
	margin-bottom: 55px;
    border-radius: 40px;
    background-color: #303F9F;
    z-index: 3;
    box-shadow: 3px 3px 5px #888;
	text-align: center;
	overflow: hidden;
}

#add_location_icon{
	margin-top: 16px;
	height: 23px;
	width: 23px;
}

h3{
    margin-left: 40px;
    margin-right: 40px;
	margin-bottom: 3px;
}

#cong_tag{
	float: left;
}

#h_tag{
	float: right;
}

.menu_style {
    width: 25px;
    height: 3px;
    background-color: black;
    margin: 4px 0;
	border-radius: 2px;
}

#menu_container{
	float: left;
	margin-left: 20px;
	margin-top: 10px;
	margin-right: 20px;
}

#menu_and_search_container{
	margin-left: 20px;
	margin-right: 20px;
	margin-top: 7px;
	margin-bottom: 10px;
}

.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    top: 0;
    left: 0;
    background-color: #3F51B5;
    overflow-x: hidden;
    transition: 0.3s;
    padding-top: 60px;
	z-index: 5;
}

.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 20px;
    color: white;
    display: block;
    transition: 0.3s;
}

.sidenav a:hover {
    color: #C5CAE9;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

#nav_cancel{
	width: 40px;
	height: 40px;
	float: right;
	margin: 40px;
}

#overlay {
    position: fixed; 
    width: 395px; 
    height: 60px;
    top: 10px;
    left: 10px;
    right: 10px;
    bottom: 10px;
    border-radius: 2px;
    background-color: white;
    z-index: 2;
    box-shadow: 1px 1px 2px #888;
}

#incorrect_data_div{
	position: fixed;
	margin-left: auto;
	margin-right: auto;
	margin-top: auto;
	margin-bottom: auto;
    width: 400px; 
    height: 350px;
    top: 1px;
    left: 1px;
    right: 1px;
    bottom: 1px;
    border-radius: 2px;
    background-color: white;
    z-index: 5;
}

#total_feedback{
	position: fixed;
	margin-left: auto;
	margin-right: auto;
	margin-top: auto;
	margin-bottom: auto;
	padding: 20px;
    width: 500px; 
    height: 450px;
    top: 1px;
    left: 1px;
    right: 1px;
    bottom: 1px;
    border-radius: 2px;
    background-color: white;
    z-index: 5;
}

#total_feedback_text_area{
	width: 480px;
	height: 290px;
	font-size: 16px;
	padding: 10px;
}

#shadow_div{
	position: fixed;
    width: auto; 
    height: auto;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 4;
}

#loading_div{
	position: fixed;
	width: auto;
	height: auto;
	top: 0px;
	bottom: 0px;
	right: 0px;
	left: 0px;
	background-color: rgba(255, 255, 255, 0.7);
	z-index: 4;
}

.loader {
    border: 10px solid #f3f3f3;
    border-top: 10px solid #FFC107;
    border-radius: 50%;
    width: 60px;
    height: 60px;
	margin-top: 250px;
	margin-left: auto;
	margin-right: auto;
    animation: spin 0.7s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

#loading_maps_text{
	margin-top: 20px;
}

#name_details_div{
	text-align: center;
}

#sign_in{
	padding-top: 25px;
	text-align: center;
	position: fixed; 
    width: 550px; 
    height: 500px;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    border-radius: 2px;
    background-color: white;
    z-index: 5;
	margin: auto;
}

#incorrect_data_notes{
	margin-left: 40px;
	margin-right: 40px;
	resize: none;
	width: 315px;
	height: 150px;
	font-size: 16px;
	padding: 5px;
}

#incorrect_cancel_btn{
	margin-left: 180px;
	background-color: white;
	color: firebrick;
}

#total_feedback_cancel{
	margin-left: 300px;
	background-color: white;
	color: firebrick;
}

#feedback_error{
	margin: 0px;
	color: firebrick;
}

@media screen and (max-width: 1100px) {
	#overlay{
		width: 400px;
		margin-left: auto;
		margin-right: auto;
	}
}

@media screen and (max-width: 615px){

	#total_feedback{
		width: 250px;
	}

	#total_feedback_text_area{
		width: 235px;
	}
	
	#total_feedback_cancel{
		margin-left: 50px;
		background-color: white;
		color: firebrick;
	}
	
	#sign_in{
		width: 325px;
		height: 450px;
	}
}

@media screen and (max-width: 650px){

	#incorrect_data_div{
		margin-left: auto;
		margin-right: auto;
		width: 320px;
	}

	#incorrect_data_notes{
		width: 235px;
	}
	
	#incorrect_cancel_btn{
		margin-left: 65px;
	}

}

@media screen and (max-width: 500px){
	#add_location_div{
		margin-right: 20px;
		margin-bottom: 20px;
	}
	
	#overlay{
		width: auto;
		border-radius: 0px;
		top: 0px;
		left: 0px;
		right: 0px;
		bottom: 0px;
	}
	
}

#search_input{
	padding: 5px;
    border-style: none;
    font-size: 17px;
	padding-left: 10px;
	padding-right: 10px;
	border-bottom: 1px solid black;
}


#names_found_list{
    list-style: none;
    margin-right: 35px;
	margin-left: 40px;
}

#send_feed_back_link{
	color: #3F51B5;
	font-size: 13px;
	text-decoration: none;
}

#h_city_and_state{
	margin-bottom: 5px;
}

select{
	margin-left: 40px;
	margin-right: 40px;
	padding-left: 30px;
	padding-right: 30px;
	padding-top: 10px;
	padding-bottom: 10px;
	font-size: 15px;
}

#li_items{
    color: #3b3b3b;
    border-bottom: 1px solid #eeeeee;
    padding-right: 10px;
    padding-left: 10px;
    padding-bottom: 10px;
    padding-top: 10px;
	cursor: pointer;
}

.name_details{
    margin-left: 40px;
    margin-right: 40px;
	margin-top: 0px;
	margin-bottom: 0px;
	color: #757575;
}

.button{
	background-color: #3F51B5;
    color: white;
	padding-left: 20px;
	padding-right: 20px;
	padding-top: 10px;
	padding-bottom: 10px;
	margin-top: 10px;
	border-radius: 2px;
	box-shadow: 1px 1px 2px #888;
	font-size: 12px;
    border: none;
    cursor: pointer;
	margin-left: 16px;
	margin-right: 16px;
}

@media screen and (min-width: 720px){
	#sign_in_container{
		width: 700px;
		padding-top: 100px;
		padding-bottom: 100px;
		margin-left: auto;
		margin-right: auto;
		-moz-box-shadow: 0 0 5px 5px #BDBDBD;
		-webkit-box-shadow: 0 0 5px 5px #BDBDBD;
	}
	html, body{
		background-color: #eeeeee;
	}
}

h1, h3{
	font-family: 'Roboto', sans-serif;
	color: #3b3b3b;
}

p{
	font-family: 'Roboto', sans-serif;
	color: #EF5350;
	margin: 0px;
	font-size: 14px;
}

.credentials {
	font-family: 'Roboto', sans-serif;
	margin-left: 10px;
	margin-right: 10px;
	margin-bottom: 20px;
	padding: 3px;
	outline: 0;
	border-width: 0 0 2px 0;
	border-color: #303F9F;
	border-style: solid;
	font-size: 17px;
	width: 230px;
}

.credentials:hover{
	background-color: #F5F5F5;
}

.log_in_button{
	background-color: #303F9F;
	border-width: 0px;
	font-family: 'Roboto', sans-serif;
	margin: 20px;
	color: white;
	font-size: 15px;
	padding-top: 15px;
	padding-bottom: 15px;
	padding-right: 77px;
	padding-left: 77px;
	border-radius: 3px;
	font-weight: bold;
}

.log_in_button:hover{
	background-color: #293689;
}

.register_button{
	background-color: white;
	border-width: 2px;
	border-color: #303F9F;
	border-style: solid;
	font-family: 'Roboto', sans-serif;
	color: #303F9F;
	font-size: 15px;
	padding-top: 15px;
	padding-bottom: 15px;
	padding-right: 62px;
	padding-left: 62px;
	border-radius: 3px;
	font-weight: bold;
}

.register_button:hover{
	border-color: #293689;
	color: #293689;
}

#loader{
	border: 6px solid #f3f3f3; /* Light grey */
    border-top: 6px solid #ffc400; 
    border-radius: 50%;
    width: 30px;
    height: 30px;
    animation: spin .7s linear infinite;
    margin: 0 auto;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

#overlay_loader_id{
	border: 5px solid #f3f3f3; /* Light grey */
    border-top: 5px solid #ffc400; 
    border-radius: 50%;
    width: 25px;
    height: 25px;
    animation: overlay_spin .7s linear infinite;
    margin: 0 auto;
}

@keyframes overlay_spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

#open_close_arrow{
	width: 20px;
	height: 20px;
	margin-left: 30px;
	margin-top: 5px;
}

.rotate_open{
	transition: .2s;
	-moz-transition: .2s;
	-ms-transition: .2s;
	-webkit-transition: .2s;
	-o-transition: .2s;
	transform: rotate(-180deg);
	transform-origin: center;
}

.rotate_closed{
	transition: .2s;
	-moz-transition: .2s;
	-ms-transition: .2s;
	-webkit-transition: .2s;
	-o-transition: .2s;
	transform: rotate(0deg);
	transform-origin: center;
}

